tests/snapshots/docx/pandoc/image_vml_as_object.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "Test with object as image:" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    EndDocument,
  ],
  terminal: Ok,
}
