tests/snapshots/docx/pandoc/inline_formatting.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "Regular text " },
    StartTextStyle { kind: Italic, id: None },
    Text { content: "italics" },
    EndTextStyle,
    Text { content: " " },
    StartTextStyle { kind: Bold, id: None },
    Text { content: "bold " },
    EndTextStyle,
    StartTextStyle { kind: Bold, id: None },
    StartTextStyle { kind: Italic, id: None },
    Text { content: "bold" },
    EndTextStyle,
    EndTextStyle,
    StartTextStyle { kind: Bold, id: None },
    StartTextStyle { kind: Italic, id: None },
    Text { content: " italics" },
    EndTextStyle,
    EndTextStyle,
    Text { content: "." },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "This is " },
    Text { content: "Small Caps" },
    Text { content: ", and this is " },
    StartTextStyle { kind: Strikethrough, id: None },
    Text { content: "strikethrough" },
    EndTextStyle,
    Text { content: "." },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "Some people use " },
    StartTextStyle { kind: Underline, id: None },
    Text { content: "single underlines for " },
    EndTextStyle,
    StartTextStyle { kind: Italic, id: None },
    StartTextStyle { kind: Underline, id: None },
    Text { content: "emphasis" },
    EndTextStyle,
    EndTextStyle,
    Text { content: "." },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "Above the line is " },
    StartTextStyle { kind: Superscript, id: None },
    Text { content: "superscript" },
    EndTextStyle,
    Text { content: " and below the line is " },
    StartTextStyle { kind: Subscript, id: None },
    Text { content: "subscript" },
    EndTextStyle,
    Text { content: "." },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "A line" },
    LineBreak,
    Text { content: "break." },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    EndDocument,
  ],
  terminal: Ok,
}
