tests/snapshots/docx/pandoc/link_in_notes.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "This is a test" },
    Text { content: "." },
    EndParagraph,
    EndDocument,
  ],
  terminal: Ok,
}
