tests/snapshots/docx/pandoc/links.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartHeading { id: None, level: 2 },
    Text { content: "An internal link and a" },
    Text { content: "n external link" },
    EndHeading,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "An " },
    StartLink { href: "http://google.com", id: None, title: None },
    Text { content: "external link" },
    EndLink,
    Text { content: " to a popular website." },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "An " },
    StartLink { href: "http://pandoc.org/README.html", id: None, title: None },
    Text { content: "external link" },
    EndLink,
    Text { content: " to a website with an anchor." },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "An " },
    StartLink { href: "#_A_section_for", id: None, title: None },
    Text { content: "internal link" },
    EndLink,
    Text { content: " to a section header." },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "An " },
    StartLink { href: "#my_bookmark", id: None, title: None },
    Text { content: "internal link" },
    EndLink,
    Text { content: " to a bookmark." },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartHeading { id: None, level: 2 },
    Text { content: "A section for testing link targets" },
    EndHeading,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "A bookmark right " },
    Text { content: "here" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    EndDocument,
  ],
  terminal: Ok,
}
